[package]
name = "drizzle-rs"
version = "0.1.0"

[workspace]
resolver = "2"
members = ["common", "sqlite"]

[workspace.package]
authors = ["Mixed Nuts"]
edition = "2021"
keywords = ["drizzle", "rizzle", "orm", "database", "sqlite"]

[workspace.dev-dependencies]
rusqlite = "0.32.1"

[workspace.dependencies]
paste = "1.0.15"
